--- a/html-and-css-prototype/index.html
+++ b/html-and-css-prototype/index.html
@@ -8,12 +8,31 @@
   <body>
     <div class="container">
       <h1>Recreate this using HTML &amp; CSS</h1>
+
+
+
       <img src="https://s3.amazonaws.com/f.cl.ly/items/2z3C3Z0L2Q0R282p1V0z/Image%202014-12-19%20at%2010.07.09%20AM.png" width="303" />
     </div>
 
     <!-- Your code goes here -->
+    <div class="container2">
+    <p class="answer"><span class="oc2">$167</span> still needed for this project.</p>
+    <div class="w3-light-grey">
+        <div class="w3-grey" ></div>
+      </div>
+      <div class="blurb">
+        <div class="blurby">
+          <p><span class="oc"> only 3 days left</span> to fund this project. <br> <br> Join the <span class="dg"> 42 </span>
+            other donors who have already supported this project. Every dollar helps.</p>
+        </div>
+        <span class="currencyinput"><input type="text"> </span>
+    <input class="letsGo" type="submit" value="Give Now" />
+<a href="https://www.w3schools.com/html/" class="theLink">Why give $50?</a>
+</div>
+<button type="button home-button" id="button1" >Save for later</button>
+<button type="button home-button" id="button2">Tell your friends</button>
 
-
+</div>
 
   </body>
 </html>
