--- a/html-and-css-prototype/index.html
+++ b/html-and-css-prototype/index.html
@@ -23,7 +23,7 @@
       <div class="blurb">
         <div class="blurby">
           <p><span class="oc"> only 3 days left</span> to fund this project. <br> <br> Join the <span class="dg"> 42 </span>
-            other donors who have already supported this project. Every dollar helps.</p>
+            othera donors who have already supported this project. Every dollar helps.</p>
         </div>
         <span class="currencyinput"><input type="text"> </span>
     <input class="letsGo" type="submit" value="Give Now" />
